Fixes menu toggle on mobile

--- a/app/assets/stylesheets/_small.sass
+++ b/app/assets/stylesheets/_small.sass
@@ -45,9 +45,6 @@
   font-weight: 800
   font-size: 26px
 
-.db-header
-  z-index: 999
-
 .socialBox
   float: left
   width: 110px
